--- a/.env
+++ b/.env
@@ -18,3 +18,27 @@
 APP_ENV=dev
 APP_SECRET=d4763965e025524024b78a4a827d9909
 ###< symfony/framework-bundle ###
+
+###> doctrine/doctrine-bundle ###
+# Format described at https://www.doctrine-project.org/projects/doctrine-dbal/en/latest/reference/configuration.html#connecting-using-a-url
+# IMPORTANT: You MUST configure your server version, either here or in config/packages/doctrine.yaml
+#
+# DATABASE_URL="sqlite:///%kernel.project_dir%/var/data.db"
+# DATABASE_URL="mysql://app:!ChangeMe!@127.0.0.1:3306/app?serverVersion=8&charset=utf8mb4"
+# DATABASE_URL="postgresql://ymmsioqhpz:ch$mon1x@translationdb.postgres.database.azure.com:5432/app?serverVersion=14&charset=utf8"
+
+# DATABASE_URL="postgresql://db_user:db_password@127.0.0.1:5432/db_name?serverVersion=13&amp;charset=utf8"
+DATABASE_URL="postgresql://ginkoia@translationdb:chamon1x2022!@translationdb.postgres.database.azure.com:5432/translation?serverVersion=13&charset=utf8"
+
+#DATABASE_SERVER="translationdb.postgres.database.azure.com"
+#DATABASE_DRIVER="postgresql"
+#DATABASE_PORT="5432"
+#DATABASE_NAME="translation"
+#DATABASE_USERNAME="ginkoia@translationdb"
+#DATABASE_PASSWORD="ch$mon1x2022"
+
+###< doctrine/doctrine-bundle ###
+
+###> nelmio/cors-bundle ###
+CORS_ALLOW_ORIGIN='^https?://(localhost|127\.0\.0\.1)(:[0-9]+)?$'
+###< nelmio/cors-bundle ###
