--- a/.env
+++ b/.env
@@ -28,7 +28,7 @@ APP_SECRET=d4763965e025524024b78a4a827d9909
 # DATABASE_URL="postgresql://ymmsioqhpz:ch$mon1x@translationdb.postgres.database.azure.com:5432/app?serverVersion=14&charset=utf8"
 
 # DATABASE_URL="postgresql://db_user:db_password@127.0.0.1:5432/db_name?serverVersion=13&amp;charset=utf8"
-DATABASE_URL="postgresql://ginkoia@translationdb:chamon1x2022!@translationdb.postgres.database.azure.com:5432/translation?serverVersion=13&charset=utf8"
+DATABASE_URL="postgresql://ginkoia@translationdb:chamon1x2022!@translationdb.postgres.database.azure.com:5432/i18n?serverVersion=13&charset=utf8"
 
 #DATABASE_SERVER="translationdb.postgres.database.azure.com"
 #DATABASE_DRIVER="postgresql"
